[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/Chiaki (1).png" type="Texture" id=1]
[ext_resource path="res://fonts/Roboto-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://styles/dialogWinBackground.stylebox" type="StyleBox" id=3]
[ext_resource path="res://styles/characterTab.stylebox" type="StyleBox" id=4]
[ext_resource path="res://dialogs/dialogChoiceWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/inkgd/ink_player.gd" type="Script" id=6]
[ext_resource path="res://dialogs/dialogWindow.gd" type="Script" id=7]
[ext_resource path="res://dialogs/dialogChoiceWindow.gd" type="Script" id=8]
[ext_resource path="res://dialogs/Pc.gd" type="Script" id=9]
[ext_resource path="res://dialogs/TextLog.tscn" type="PackedScene" id=10]
[ext_resource path="res://isometric_boxes/ink_scripts/main_script.ink.json" type="Resource" id=11]
[ext_resource path="res://Images/backgrounds/vnBackground_village.png" type="Texture" id=12]
[ext_resource path="res://shaders/pixelize.gdshader" type="Shader" id=13]
[ext_resource path="res://dialogs/DialogueWindow.gd" type="Script" id=14]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 13 )
shader_param/size_x = 0.135
shader_param/size_y = 0.136

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.00784314, 0.0156863, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.321569, 0.309804, 0.309804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Control" type="Control"]
material = SubResource( 3 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
InkFile = ExtResource( 11 )
DialogueWindowPath = NodePath("Dialogue layer/DialogueWindow")

[node name="InkPlayer" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dialogue layer" type="CanvasLayer" parent="."]

[node name="DialogueWindow" type="MarginContainer" parent="Dialogue layer"]
anchor_left = 0.0283203
anchor_top = 0.790365
anchor_right = 0.818
anchor_bottom = 1.001
margin_right = 0.367981
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="textWindow" type="PanelContainer" parent="Dialogue layer/DialogueWindow"]
margin_right = 809.0
margin_bottom = 161.0
custom_styles/panel = ExtResource( 3 )

[node name="M" type="MarginContainer" parent="Dialogue layer/DialogueWindow/textWindow"]
margin_right = 809.0
margin_bottom = 161.0
custom_constants/margin_right = 74
custom_constants/margin_top = 4
custom_constants/margin_left = 32
custom_constants/margin_bottom = 6

[node name="HBox" type="HBoxContainer" parent="Dialogue layer/DialogueWindow/textWindow/M"]
margin_left = 32.0
margin_top = 4.0
margin_right = 735.0
margin_bottom = 155.0

[node name="VBox" type="VBoxContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox"]
margin_right = 703.0
margin_bottom = 151.0
size_flags_horizontal = 3
alignment = 1

[node name="M2" type="MarginContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox"]
margin_right = 209.0
margin_bottom = 22.0
size_flags_horizontal = 0
custom_constants/margin_left = 39
custom_constants/margin_bottom = -4

[node name="Pc" type="PanelContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox/M2"]
margin_left = 39.0
margin_right = 209.0
margin_bottom = 26.0
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 9 )

[node name="Center" type="CenterContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox/M2/Pc"]
margin_left = 16.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox/M2/Pc/Center"]
margin_right = 138.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Characters name"

[node name="M" type="MarginContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox"]
margin_top = 26.0
margin_right = 703.0
margin_bottom = 151.0
size_flags_vertical = 3
custom_constants/margin_right = 69
custom_constants/margin_bottom = 3

[node name="Pc" type="PanelContainer" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox/M"]
margin_right = 634.0
margin_bottom = 122.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue layer/DialogueWindow/textWindow/M/HBox/VBox/M/Pc"]
margin_left = 15.0
margin_top = 8.0
margin_right = 619.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "His full dialogue with lasts tooo long oh fod when this will end i cant take this anymore. I also need more text because its funyy yeaaa
Тестируем русский шрифт
"
fit_content_height = true

[node name="ChoiceWindow" parent="Dialogue layer" instance=ExtResource( 5 )]
anchor_left = 0.068
anchor_top = 0.376
anchor_right = 0.706
anchor_bottom = 0.79
script = ExtResource( 8 )

[node name="CharacterSprite" type="TextureRect" parent="Dialogue layer"]
anchor_left = 0.696
anchor_top = 0.431
anchor_right = 0.982
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Background image" type="CanvasLayer" parent="."]
layer = -1

[node name="Illustration" type="TextureRect" parent="Background image"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true

[node name="Popup layer" type="CanvasLayer" parent="."]
layer = 2

[node name="PopupPanel" type="PopupPanel" parent="Popup layer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="TextLog" parent="Popup layer/PopupPanel" instance=ExtResource( 10 )]
